Fix: Shift changes

--- a/src/app/forms/components/schedular/schedule-configuration/schedule-configuration.component.scss
+++ b/src/app/forms/components/schedular/schedule-configuration/schedule-configuration.component.scss
@@ -341,6 +341,15 @@
   .mt-12 {
     margin-top: 12px;
   }
+  .shift-dropdown {
+    color: $black;
+    font-weight: 500;
+    font-size: 110%;
+  }
+}
+
+::ng-deep .float-right {
+  float: right;
 }
 
 ::ng-deep .assign-menu + * .mat-menu-panel {
