--- a/src/app/forms/components/schedular/shift-chart/shift-chart.component.scss
+++ b/src/app/forms/components/schedular/shift-chart/shift-chart.component.scss
@@ -1,7 +1,4 @@
 @import '../../../../../scss/colors.scss';
 
 #shift-container {
-  color: $black;
-  font-weight: 500;
-  font-size: 110%;
 }
